--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -63,5 +63,6 @@
 <script src="assets/js/app.js"></script>
 <!-- Required datatable js -->
 <script src="assets/js/jquery.dataTables.min.js"></script>
+<!--<script src="assets/js/datatableEditor.min.js"></script>-->
 <script src="assets/js/dataTables.bootstrap4.min.js"></script>
 
